# dummy-api

./: .dockerignore  .env.sample  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
migrations/2022-06-20-155823_create_tour_table/: down.sql  up.sql
src/: main.rs  schema.rs
src/actors/: db.rs  messages.rs  mod.rs
src/models/: mod.rs  models.rs
