[package]
name = "tour-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
actix = "0.10.0"
actix-web = "3.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
diesel = { version = "1.4", features = ["uuidv07", "r2d2", "postgres"] }
dotenv = "0.15"
